--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,35 +1,47 @@
+<%= render 'shared/errors', obj: @article %>
 
-<% if @article.errors.any? %>
-<div>
-<h3>The following errors prevented the article from getting created</h3>
+
+<div class="row">
+  <div class="col-xs-12">
+    <%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+        <%= f.label :title %>
+        </div>
+        <div class="col-sm-8">
+        <%= f.text_field :title, class: "form-control", Placeholder: "Title", autofocus: true %>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-8">
+          <div class= "col-sm-8">
+            <%= image_tag @article.image.url(:medium) %>
+            <%= f.file_field :image, class: "form-control", autofocus: true, multiple: true %>
+            
+          </div>
+        </div>
+      </div>
+      
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+        <%= f.label :description %>
+        </div>
+        <div class="col-sm-8">
+        <%= f.text_area :description, rows: 10,  class: "form-control", Placeholder: "Body of Article", autofocus: true %>
+         </div>
+        </div>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+      <%= f.submit class: "btn btn-primary btn-lg" %>
+      </div>
+    </div>
+    <% end %>
+    <div class="col-sx-2 col-xs-offset-2">
+        [ <%= link_to "Cancel", articles_path %> ]
+    </div>
+  </div>
 </div>
-<div>
-  <ol type="1">
 
-     <% @article.errors.full_messages.each do |msg| %>
-     <li><font color= "red"><%= msg %></font></li>
-     <% end %>
-     
-</ol>
-</div>
-<% end %>
-
-
-
-<%= form_for @article do |f| %>
-<p>
-  <%= f.label :title %></br>
-  <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :description %></br>
-    <%= f.text_area :description %>
-  </p>
-  <p>
-    <%= f.submit class: 'button' %> | <%= link_to "Back to articles listing", articles_path, class: 'button' %>
-  </p>
-  
-<% end %>
 
 
 
