--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,56 +1,19 @@
-<!DOCTYPE html>
-<html>
-<head>
-</head>
-<body>
-<div id="top">
-<ul>
-  <li style="float:left"><a class="header1" href="/">OTTB United</a></li>
-  <li style="float:left"><a href="/articles">Articles</a></li>
-  <li style="float:left"><a href="#categories">Users</a></li>
-  <li style="float:left"><a href="#categories">Categories</a></li>
-  <li style="float:left; margin: 0 0 0px 20px"><a<form><input type="text1" name="search" placeholder="Search.."></form></a></li>
-  <li style="float:right"><a href="#about">Log in</a></li>
-  <li style="float:right"><a href="#about">Sign Up</a></li>
-</ul>
+
+
+<h1 align="center">Listing all articles</h1>
+
+<div align="center">
+
+<%= will_paginate %>
+
 </div>
 
-<div id= "separator">
-<h2 class= "header2">OTTB United</h2>
+<%= render 'article', obj: @articles %>
+
+<div align="center">
+
+
+<%= will_paginate %>
+
 </div>
 
-<div class= "listing">
-<p>Listing all articles</p>
-<%= link_to "Create new article", new_article_path, class: 'button' %>
-</div>
-
-<div class= "tablescroll">
-               <table class= "ArticleTable">
-                    <tr>
-                    <% @articles.each do |article| %>
-                        <td>
-                            <b>Title:</b></br>
-                            <%= article.title %></br>
-
-                            <b>Description:</b></br>
-    	                      	<%= article.description %></br>
-                             <b></b></br>
-                          <%= link_to 'Edit', edit_article_path(article) %> | <%= link_to 'Show', article_path(article) %> | <%= link_to 'Delete', article_path(article), method: :delete, data: {confirm: "Are you sure?"} %>
-                         </td>
-                    </tr>
-                    <% end %>
-                   </table>
-                  </div>
-
-
-<div id= "line">
-<ul>
-  <li style="float:right; margin: 0 0 0px 0px"><a href="#about">About</a></li>
-  <li style="float:right"><a href="#about">Contact</a></li>
-</ul>
-</div>
-
-
-
-</body>
-</html>
