--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,40 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
- <div id="top">
-<ul>
-  <li style="float:left"><a class="header1" href="/">OTTB United</a></li>
-  <li style="float:left"><a href="/articles">Articles</a></li>
-  <li style="float:left"><a href="#categories">Users</a></li>
-  <li style="float:left"><a href="#categories">Categories</a></li>
-  <li style="float:left; margin: 0 0 0px 20px"><a<form><input type="text1" name="search" placeholder="Search.."></form></a></li>
-  <li style="float:right"><a href="#about">Log in</a></li>
-  <li style="float:right"><a href="#about">Sign Up</a></li>
-</ul>
-</div>
-
-<div id= "separator">
-<h2 class= "header2">OTTB United</h2>
-</div>
-
-<div class= "listing">
-<h3></h3>
-</div>
-
-
+  <%= render 'layouts/navigation' %>
   <%= render 'layouts/messages' %>
-  <%= yield %>
+  <div class="container">
+    <%= yield %>
+  </div>
+  <%= render 'layouts/footer' %>
   
-
-
-<div id= "line">
-<ul>
-  <li style="float:right; margin: 0 0 0px 0px"><a href="/about">About</a></li>
-  <li style="float:right"><a href="#about">Contact</a></li>
-</ul>
-</div>
-
-
+  
 
 </body>
 </html>
