--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,19 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-</head>
-<body>
-
-
-<div class= "listing">
-<p>Log In</p>
-</div>
-
-<div class= "form">
-  <div class= "login"></div>
-</div>
-
-
-
-</body>
-</html>
+<div class="center jumbotron">
+  <h1>OTTB UNITED</h1>
+    <%= link_to "Sign Up Now", signup_path, class: "btn btn-default btn-lg btn-xlarge" %>
+    </div>
