--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -16,7 +16,7 @@
         <div class="col-sm-offset-2 col-sm-8">
           <div class= "col-sm-8">
             <%= image_tag @article.image.url(:medium) %>
-            <%= f.file_field :image, class: "form-control" %>
+            <%= f.file_field :image, class: "form-control", autofocus: true %>
             
           </div>
         </div>
